[project]
name = "youtube-blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "uvicorn>=0.34.3",
]
